--- a/statlearn_1st.Rmd
+++ b/statlearn_1st.Rmd
@@ -40,7 +40,7 @@ editor_options:
 
 ## Research Title
 
-Pausetta Briscola?
+"Pausetta Briscola?"
 
 ------------------------------------------------------------------------
 
