--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,16 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Pino': 591, 'Gianfredo': 409}"
+       "{'Pino': 610, 'Gianfredo': 376}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,9 @@
     "giocatori = ['Pino' , 'Gianfredo']\n",
     "counter = {'Pino': 0 , 'Gianfredo':0 }\n",
     "for i in range(B):\n",
-    "    counter[giocatori[game.play_game()]] += 1\n",
+    "    result = game.play_game()\n",
+    "    if result != None:\n",
+    "        counter[giocatori[result]] += 1\n",
     "counter"
    ]
   }
