--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,24 +20,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Pino': 610, 'Gianfredo': 376}"
+       "{'Pino': 494, 'Gianfredo': 484, 'Ties': 22}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "B = 1000\n",
-    "giocatori = ['Pino' , 'Gianfredo']\n",
-    "counter = {'Pino': 0 , 'Gianfredo':0 }\n",
+    "giocatori = ['Pino' , 'Gianfredo', 'Ties']\n",
+    "counter = {'Pino': 0 , 'Gianfredo':0, 'Ties':0}\n",
     "for i in range(B):\n",
     "    result = game.play_game()\n",
     "    if result != None:\n",
@@ -62,7 +62,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
