Descrizione e reload del .py

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,11 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import briscola"
+    "try:\n",
+    "    import importlib\n",
+    "    importlib.reload(briscola)\n",
+    "except NameError:\n",
+    "    import briscola\n"
    ]
   },
   {
