--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import itertools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,16 +35,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Pino': 493, 'Gianfredo': 498, 'Ties': 9}"
+       "'Spade'"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game.briscola"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Pino': 181, 'Gianfredo': 809, 'Ties': 10}"
+      ]
+     },
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
