--- a/train/test.ipynb
+++ b/train/test.ipynb
@@ -2,91 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mcandi-1884760\u001b[0m (\u001b[33msufers\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "wandb version 0.15.6 is available!  To upgrade, please run:\n",
-       " $ pip install wandb --upgrade"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.15.5"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>c:\\Users\\mcm23\\OneDrive\\Desktop\\GitHub\\Briscola-Game\\train\\wandb\\run-20230725_111300-uqv4j0n4</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/sufers/briscola_game/runs/uqv4j0n4' target=\"_blank\">stellar-silence-276</a></strong> to <a href='https://wandb.ai/sufers/briscola_game' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/sufers/briscola_game' target=\"_blank\">https://wandb.ai/sufers/briscola_game</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/sufers/briscola_game/runs/uqv4j0n4' target=\"_blank\">https://wandb.ai/sufers/briscola_game/runs/uqv4j0n4</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from Brain_DDQN import Brain\n",
@@ -95,13 +13,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "brain = Brain(162, 40, True)\n",
-    "# torch.save(brain.model.state_dict(), 'model_weights.pth')"
+    "Run training"
    ]
   },
   {
@@ -127,8 +42,28 @@
     }
    ],
    "source": [
+    "brain = Brain(162, 40, True)\n",
     "wins, loss = brain.train()\n",
     "print(\"I'm reinforcing myself🏋️, give me a moment...⌛\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save model weigths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import torch\n",
+    "\n",
+    "# brain = Brain(162, 40)\n",
+    "# torch.save(brain.model.state_dict(), 'model_weights.pth')"
    ]
   },
   {
@@ -175,12 +110,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "game = Game(['Q_learning', 'Random'])"
+    "Simulation"
    ]
   },
   {
@@ -200,6 +133,8 @@
     }
    ],
    "source": [
+    "game = Game(['Q_learning', 'Random'])\n",
+    "\n",
     "B = 1000\n",
     "giocatori = ['Pino' , 'Gianfredo', 'Ties']\n",
     "counter = {'Pino': 0 , 'Gianfredo':0, 'Ties':0}\n",
